--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 		<!-- Devicons -->
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		
 
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -23,157 +24,9 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-	<style>
-		html {
-			background-color: #fff;
-		}
-		body {
-		  background: url('https://i.imgur.com/tIm2o5z.png');
-		  background-attachment: fixed;
-		  background-repeat: no-repeat;
-		  background-size: cover;
-		  padding: 0 5vw;
-		  min-height: 100vh;
-		}
+		<link href="css/style.css" rel="stylesheet">
 
-		.nav-default {
-			background: white;
-
-		}
-
-		h1, h2, h3, h4, h5{
-			color:#4A4E69 !important;
-			font-weight: 300;
-			font-family: 'Open Sans', sans-serif;
-		}
-
-		p {
-			color: #4A4E69;
-			font-weight: 300;
-			font-family: 'Open Sans', sans-serif;
-		}
-
-		.main-container {
-			padding-top:50px;
-		}
-
-		.about-me h1 {
-			font-size:24px;
-		}
-
-		.about-me h2 {
-			font-size:20px;
-		}
-
-		.about-me h3 {
-			font-size:18px;
-		}
-
-		.bottom-cta {
-			background: white;
-			position: fixed;
-			width: 100%;
-			padding: 15px;
-			box-shadow: 0 0 2px 3px lightgrey;
-			left: 0;
-			z-index: 10000;
-			bottom: 0;
-		}
-
-		.cta-icon {
-			font-size:2em;
-			margin:5px;
-		}
-
-
-		.cta-icon:hover,
-		.cta-icon:focus {
-			text-decoration: none;
-		}
-
-		.profile-pic {
-			box-shadow: 0px 4px 6px 2px lightgrey;
-		  border-radius: 50%;
-		  max-width: 70%;
-		}
-
-		/*.m-t-1 {
-			margin-top:1em;
-		}
-
-		.p-t-1 {
-			padding-top:1em;
-		}*/
-
-
-		/*.about-me {
-			margin-top:25px;
-		}*/
-
-		.navbar-default {
-			background-color: #C9ADA7;
-			background: none;
-			border: none;
-			border-radius:0;
-		}
-
-		/*.row-footer {
-			background-color: lightgrey;
-			-webkit-clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
-			clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
-			padding: 65px 10px;
-		}*/
-
-		.work-item-row {
-			/*padding: 10% 0;*/
-			margin-bottom:100px;
-		}
-
-		.row-tools {
-		  padding: 50px 0;
-		}
-
-		/*.linkedin-btn {
-			width:140px;
-			box-shadow: 0px 2px 5px 1px lightgrey;
-			padding: 12px;
-			border-radius: 5px;
-		}*/
-
-		.btn-launch {
-			width:100%;
-			max-width:200px;
-			background-color: #549657;
-			color:white;
-			box-shadow: 0px 2px 5px 1px darkgrey;
-		}
-
-		.btn-launch:hover,
-		.btn-launch:focus {
-			color: white;
-			background: #3d7140;
-		}
-
-		.about-side {
-			position:fixed;
-		}
-
-		.project {
-			background: white;
-			border-radius:5px;
-			box-shadow: 0 0 2px 2px lightgrey;
-			padding: 30px;
-		}
-
-		.project img {
-			margin:auto;
-		}
-
-		.techIcon {
-			font-size: 34px;
-		}
-
-	</style>
+	
 
 
 	</head>
@@ -193,7 +46,7 @@
 
 						<div class="text-center" style="margin:20px">
 							<!-- <a href="#" class="cta-icon"><i class="devicon-twitter-plain colored"></i></a> -->
-							<a href="#" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
+							<a href="https://github.com/javierjpagan" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
 						</div>
 				</div>
 
@@ -230,8 +83,9 @@
 
 								<div class="row text-center">
 									<div class="col-xs-12">
+										<i class="devicon-javascript-plain colored techIcon"></i>
 											<i class="devicon-react-plain-wordmark colored techIcon"></i>
-											<i class="devicon-javascript-plain-wordmark colored techIcon"></i>
+											<!-- Testing 1 2 -->
 											<i class="devicon-nodejs-plain-wordmark colored techIcon"></i>
 											<i class="devicon-mongodb-plain-wordmark colored techIcon"></i>
 									</div>
@@ -239,6 +93,13 @@
 
 								<div class="row text-center" style="margin:20px;">
 										<a class="btn btn-launch" href="https://github.com/javierjpagan/greenpoint-proyect-3-jp" target="blank">Launch</a>
+										<!-- Testing buttons -->
+										<i class="devicon-amazonwebservices-plain-wordmark colored techIcon"></i>
+										<i class="devicon-heroku-plain-wordmark colored techIcon"></i>
+										<i class="devicon-github-plain-wordmark colored techIcon"></i>
+
+
+
 								</div>
 							</div>
 					</div>
@@ -253,9 +114,9 @@
 
 								<div class="row text-center">
 									<div class="col-xs-12">
+										<i class="devicon-javascript-plain colored techIcon"></i>
 											<i class="devicon-bootstrap-plain-wordmark colored techIcon"></i>
 											<i class="devicon-mysql-plain-wordmark colored techIcon"></i>
-											<i class="devicon-javascript-plain-wordmark colored techIcon"></i>
 											<i class="devicon-sequelize-plain-wordmark colored techIcon"></i>
 											<i class="devicon-nodejs-plain-wordmark colored techIcon"></i>
 									</div>
@@ -277,8 +138,9 @@
 
 								<div class="row text-center">
 									<div class="col-xs-12">
+										<i class="devicon-javascript-plain colored techIcon"></i>
 											<i class="devicon-bootstrap-plain-wordmark colored techIcon"></i>
-											<i class="devicon-javascript-plain-wordmark colored techIcon"></i>
+											<i class="devicon-firebase-plain-wordmark colored techIcon"></i>
 									</div>
 								</div>
 
@@ -293,6 +155,11 @@
 						<div class="col">
 							<div style="margin:50px;">
 								<h3 style="margin:50px 0 15px">I'm available for work, get in touch</h3>
+								<div class="text-center" style="margin:20px">
+									<a style="margin:50px 0 15px" href="mailto:jjpmcpa@gmail.com" class="" target="_blank">
+										jjpmcpa@gmail.com
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
