--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 								<img src="https://media.giphy.com/media/TL7BpAfQozr8qpIZOw/giphy.gif" class="img-responsive">
 
-									<h2 class="text-center"><a href="html_url" target="blank">GreenPoint</a></h2>
+									<h2 class="text-center"><a href="https://github.com/javierjpagan/greenpoint" target="blank">GreenPoint</a></h2>
 
 								<p>Greenpoint is an app intended to build awareness around environmentally conscious actions and reward uses through points and community.</p>
 
@@ -92,11 +92,11 @@
 								</div>
 
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/javierjpagan/greenpoint-proyect-3-jp" target="blank">Launch</a>
+										<a class="btn btn-launch" href="https://glacial-peak-greenpoint.herokuapp.com/" target="blank">Launch</a>
 										<!-- Testing buttons -->
-										<i class="devicon-amazonwebservices-plain-wordmark colored techIcon"></i>
+										<!-- <i class="devicon-amazonwebservices-plain-wordmark colored techIcon"></i>
 										<i class="devicon-heroku-plain-wordmark colored techIcon"></i>
-										<i class="devicon-github-plain-wordmark colored techIcon"></i>
+										<i class="devicon-github-plain-wordmark colored techIcon"></i> -->
 
 
 
@@ -108,7 +108,7 @@
 
 								<img src="https://media.giphy.com/media/QvS7t7L9VmCwwkTife/giphy.gif" class="img-responsive">
 
-									<h2 class="text-center"><a href="html_url" target="blank">FlexSpace</a></h2>
+									<h2 class="text-center"><a href="https://github.com/javierjpagan/FlexSpace" target="blank">FlexSpace</a></h2>
 
 								<p>An app that shares conference meeting spaces between offices and potential renters. </p>
 
@@ -123,7 +123,7 @@
 								</div>
 
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/javierjpagan/FlexSpace-Group-Project-2" target="blank">Launch</a>
+										<a class="btn btn-launch" href="https://gwbootcampflexspace.herokuapp.com/" target="blank">Launch</a>
 								</div>
 							</div>
 					</div>
@@ -132,7 +132,7 @@
 
 								<img src="https://media.giphy.com/media/ZCxfSKUibml0m9zdjT/giphy.gif" class="img-responsive">
 
-									<h2 class="text-center"><a href="html_url" target="blank">HOVLane</a></h2>
+									<h2 class="text-center"><a href="https://github.com/javierjpagan/HOVLane-firebase" target="blank">HOVLane</a></h2>
 
 								<p>Meetup and carpool service with featured access to local weather and events.</p>
 
@@ -145,7 +145,7 @@
 								</div>
 
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/javierjpagan/HOVLane-Project-1" target="blank">Launch</a>
+										<a class="btn btn-launch" href="https://hovlane-firebase.herokuapp.com/" target="blank">Launch</a>
 								</div>
 							</div>
 					</div>
@@ -154,7 +154,7 @@
 					<div class="row row-footer text-center">
 						<div class="col">
 							<div style="margin:50px;">
-								<h3 style="margin:50px 0 15px">I'm available for work, get in touch</h3>
+								<h3 style="margin:50px 0 15px">I'm available for work, get in touch with me</h3>
 								<div class="text-center" style="margin:20px">
 									<a style="margin:50px 0 15px" href="mailto:jjpmcpa@gmail.com" class="" target="_blank">
 										jjpmcpa@gmail.com
