--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 						<div class="text-center" style="margin:20px">
 							<!-- <a href="#" class="cta-icon"><i class="devicon-twitter-plain colored"></i></a> -->
-							<a href="https://github.com/javierjpagan" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
+							<a href="https://github.com/javierjpagan" target="blank" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
 						</div>
 				</div>
 
