--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								</div>
 
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://hovlane-firebase.herokuapp.com/" target="blank">Launch</a>
+										<a class="btn btn-launch" href="https://javierjpagan.github.io/HOVLane-firebase/" target="blank">Launch</a>
 								</div>
 							</div>
 					</div>
