--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<div class="row row-footer text-center">
 						<div class="col">
 							<div style="margin:50px;">
-								<h3 style="margin:50px 0 15px">I'm available for work, get in touch with me</h3>
+								<h3 style="margin:50px 0 15px">I'm available for work, get in touch with me.</h3>
 								<div class="text-center" style="margin:20px">
 									<a style="margin:50px 0 15px" href="mailto:jjpmcpa@gmail.com" class="" target="_blank">
 										jjpmcpa@gmail.com
