--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 
+		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -93,10 +95,7 @@
 
 								<div class="row text-center" style="margin:20px;">
 										<a class="btn btn-launch" href="https://glacial-peak-greenpoint.herokuapp.com/" target="blank">Launch</a>
-										<!-- Testing buttons -->
-										<!-- <i class="devicon-amazonwebservices-plain-wordmark colored techIcon"></i>
-										<i class="devicon-heroku-plain-wordmark colored techIcon"></i>
-										<i class="devicon-github-plain-wordmark colored techIcon"></i> -->
+
 
 
 
@@ -149,6 +148,7 @@
 								</div>
 							</div>
 					</div>
+
 
 
 					<div class="row row-footer text-center">
